--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+.vs/
+.gradle/
+ExportedObj/
+.consulo/
+*.csproj
+*.unityproj
+*.sln
+*.suo
+*.tmp
+*.user
+*.userprefs
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.mdb
+*.opendb
+*.VC.db
+*.pidb.meta
+*.pdb.meta
+*.mdb.meta
+# Builds
+*.apk
+*.aab
+*.app
 LICENSE.meta
 README.md.meta
 version.txt.meta
-PlayListManager.cs
-.github
+_CommonRessources.meta
+OtherPrefabs.meta
+Scripts.meta
+SlickUI.meta
+*.cs.meta
