--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ _blank.asset
 _Templates.unity
 _Templates.unity.meta
 Scripts.meta
+KeyPad.meta
+KeyPad/Scripts/UwUtils_Keypad.asset.meta
+KeyPad/Ressources.meta
+KeyPad/Editor.meta
+Scripts/WIPs.meta
