--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chirp.reava.uwutils",
   "displayName": "UwUtils",
-  "version": "1.0.1",
+  "version": "1.0.0-pre.1",
   "unity": "2022.3",
   "description": "A collection of -almost- niche UdonSharp scripts as an (almost) all in one Toolkit for world creators",
   "author": {
