--- a/Editor/chirp.reava.uwutils.Editor.asmdef
+++ b/Editor/chirp.reava.uwutils.Editor.asmdef
@@ -2,9 +2,7 @@
     "name": "chirp.reava.uwutils.Editor",
     "rootNamespace": "",
     "references": [
-        "chirp.reava.uwutils",
-        "BakeryEditorAssembly",
-        "BakeryRuntimeAssembly"
+        "chirp.reava.uwutils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
