--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "chirp.reava.uwutils",
   "displayName": "UwUtils",
-  "version": "1.0.0-pre.3",
+  "version": "1.0.0-pre.4",
   "unity": "2022.3",
-  "description": "A collection of -almost- niche UdonSharp scripts as an (almost) all in one Toolkit for world creators",
+  "description": "A collection of -almost- niche UdonSharp scripts as an (almost) all in one Toolkit for World Creators with more than 30 scripts, supports persistence and more.",
   "author": {
     "name": "Reava_",
     "email": "reava.vr@gmail.com",
